--- a/src/Component/Abouts/User.css
+++ b/src/Component/Abouts/User.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 40px;
-    max-width: 1200px;
+    max-width: 100%;
     margin: 50px auto;
     text-align: center;
 }
