--- a/src/Component/Service/Services3.css
+++ b/src/Component/Service/Services3.css
@@ -1,7 +1,7 @@
 .services3-container {
     text-align: center;
     padding: 20px;
-    max-width: 1200px;
+    max-width: 100%;
     margin: auto;
 }
 
